Last Commit. Rebuild html layout from ground up. Fix crooked alignment.
as in the title + added some hover effects. chao

--- a/styles/bottom.css
+++ b/styles/bottom.css
@@ -1,23 +1,17 @@
 .bottom{
-    flex: 0.25 0.25 0;
-    width: 100%;
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-
+    width: 100%
 }
 .action{
     width: 50%;
+    margin: auto;
     height: 200px;
-    margin-left: 20%;
     background-color: #3882F6;
     border-radius: 18px;
     margin-top: 50px;
     margin-bottom: 50px;
     display: flex;
     justify-content: space-evenly;
-    align-content: center;
-    fill-opacity: 50%;
+    align-items: center;
 }
 
 .action>p{
@@ -27,23 +21,15 @@
 }
 
 
-.action button{
-    align-self: center;
-    height: 40px;
-    width: 100px;
-    border-radius: 10px;
+.action>button{
     border-style: solid;
-    font-size: 17px;
-    font-weight: bold;
-    color:white;
-    background-color: #3882f6;
     border-color: white;
-    cursor: pointer;
-    margin-left: 20px;
+    width: fit-content;
 }
 
 footer{
     color:aliceblue;
+    margin: auto;
     font-weight: 500;
     width: 100%;
     padding-bottom: 20px;
