--- a/styles/main.css
+++ b/styles/main.css
@@ -1,36 +1,43 @@
 
 .main{
-    margin: 0 0 0 0;
+    margin: auto;
+    width: 80%;
+    margin-bottom: 30px;
     display: flex;
-    align-self: center;
-    flex: 0.25 0.25 auto;
     text-align: center;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    align-content: center;
-    width: 960px;
-    gap: 20px;
+    align-items: center;
+    gap: 40px;
 }
-
-.plants{
-    width: 100%;
-    object-fit: contain;
+.main>div{
+    width: 410.6px;
 }
-.main div{
-    width: 220px;
-    margin-top: 50px;
-    flex: 0 1 0;
+.bg{
+    background-color: #E5E7EB;
 
 }
+
 .quote{
-    margin-top: 100px;
-    padding-top:150px;
-    padding-bottom:150px;
-    padding-left: 100px;
-    padding-right: 100px;
-    width: 100%;
+    background-color: #E5E7EB;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+
+.quote div{
     background-color: #E5E7EB;
     font-size: 36px;
     font-weight: light;
     color: #1F2037;
+    word-wrap: normal;
+}
+
+.quote span{
+    background-color: #E5E7EB;
+    font-size: 30px;
+    font-weight: bold;
+    color: #1F2037;
+    align-self: flex-end;
 }
